nodejs.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: nodejs
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: nodejs
    spec:
      containers:
      - name: nodejs
        image: gcr.io/kents-core/nodejs-sample:v1
        ports:
        - containerPort: 8080
